# rust-load-balancer

./: .gitignore  Cargo.toml  development.toml  docker-compose.yml  start_servers.sh  test_connection.sh
service1/: Dockerfile
service2/: Dockerfile
service_1/: Dockerfile  index.html
service_2/: index.html
service_3/: index.html
service_4/: index.html
service_5/: index.html
service_6/: index.html
service_7/: index.html
src/: lib.rs  main.rs
src/common/: types.rs
src/configuration/: mod.rs
src/proxy/: backend.rs  load_balancer.rs  mod.rs  proxy.rs
src/selection_method/: mod.rs  round_robin.rs
src/utils/: tracing.rs
