[package]
name = "rust-load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
bytes = "1.6.0"
color-eyre = "0.6.3"
config = "0.14.0"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
