[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
base64 = "0.22.1"
bytes = "1.6.0"
color-eyre = "0.6.3"
config = "0.14.0"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
lazy_static = "1.5.0"
notify = "6.1.1"
prometheus-hyper = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
sha1 = "0.10.6"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
